welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value n
  else return (1+golomb(n)-golomb(golomb(n-1)))
                        ^golomb:5: error: not found: value n
  else return (1+golomb(n)-golomb(golomb(n-1)))
                                         ^