welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  if (num==1){
    return 1
  }
  else return (1+golomb(n)-golomb(golomb(n-1)))
}
